--- a/_config.yml
+++ b/_config.yml
@@ -13,36 +13,36 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Shanghai
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Ken Agapito # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Data Scientist | Educator # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Selected works of Ken Agapito, data scientist and educator.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://kenaagapito.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: kenaagapito # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+# twitter:
+#   username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Ken Agapito
+  email: kenaagapito@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    # - https://twitter.com/username # change to your twitter homepage
+    - https://github.com/kenaagapito # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -66,17 +66,17 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: # [light|dark]
+theme_mode: dark #light|dark
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: "https://scontent.fmnl17-4.fna.fbcdn.net/v/t1.18169-9/5678_1275778675769136_296783231665241639_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=174925&_nc_eui2=AeF5gkJ-sAQYrsBQUXjlU8nbSPQH0y7FY45I9AfTLsVjjo3OOj9TCVuCGfb2-kRRlLJvOuKjc2ftVEdXQuXTIXl3&_nc_ohc=DAw_YryjRGAAX8F0Vd0&_nc_ht=scontent.fmnl17-4.fna&oh=00_AfCJohJ56x6Eeqrhfjii5QBq0Msh9zWlZu7yQuyzpj9h2g&oe=6540928A"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
@@ -180,7 +180,6 @@ exclude:
   - docs
   - tools
   - README.md
-  - CHANGELOG.md
   - LICENSE
   - rollup.config.js
   - package*.json
